# rust-package-downloader

./: .gitignore  Cargo.toml  README.md  list.txt
src/: downloader.rs  lib.rs  main.rs
src/downloader/: downloadresult.rs  threadpool.rs
